--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ele-cal-02",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aravindraviram.github.io/elecalwaytobank",
+  "homepage": "https://aravindraviram.github.io/elecalwaytobank/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
